Implement "for update of" on SQL Select query